--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+  <div class="row col-md-6">
+
 <p>name: <%= @event.name %></p>
 <p>start: <%= @event.start %></p>
 <p>end: <%= @event.end %></p>
@@ -6,3 +9,5 @@
 <p>status: <%= @event.status %></p>
 
 <p><%= button_to 'Edit', "/events/#{@event.id}/edit", {method: :get, class: "btn btn-warning"} %></p>
+  </div>
+</div>
