--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,12 +1,54 @@
 <div class="container">
   <div class="row col-md-6">
+    <h4>What</h4>
+    <p><%= @event.name %></p>
+    <br>
+    <h4>Where</h4>
+    <p><%= @event.location %></p>
+    <br>
+    <h4>When</h4>
+    <p><%= @event.start.strftime("%a, %b %d %I:%M %P")%> - <%= @event.end.strftime("%I:%M %P") %></p>
+    <br>
+    <h4>Who</h4>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Type</th>
+          <th>Name</th>
+          <th>Decision</th>
+        </tr>
+      </thead>
 
-<p>name: <%= @event.name %></p>
-<p>start: <%= @event.start %></p>
-<p>end: <%= @event.end %></p>
-<p>duration: <%= @event.duration %></p>
-<p>location: <%= @event.location %></p>
-<p>status: <%= @event.status %></p>
+      <% if @event_pending %>
+        <% @event_pending.each do |invitation| %>
+          <tr>
+            <td><%= invitation.mem_type.capitalize %></td>
+            <td><%= User.find(invitation.user_id).name.capitalize %></td>
+            <td><%= invitation.decision.capitalize %></td>
+          </tr>
+        <% end %>
+      <% end %>
+
+      <% if @event_accept %>
+        <% @event_accept.each do |invitation| %>
+          <tr>
+            <td><%= invitation.mem_type.capitalize %></td>
+            <td><%= User.find(invitation.user_id).name.capitalize %></td>
+            <td><%= invitation.decision %></td>
+          </tr>
+        <% end %>
+      <% end %>
+
+      <% if @event_decline %>
+        <% @event_decline.each do |invitation| %>
+          <tr>
+            <td><%= invitation.mem_type.capitalize %></td>
+            <td><%= User.find(invitation.user_id).name.capitalize %></td>
+            <td><%= invitation.decision %></td>
+          </tr>
+        <% end %>
+      <% end %>
+    </table>
 
 <p><%= button_to 'Edit', "/events/#{@event.id}/edit", {method: :get, class: "btn btn-warning"} %></p>
   </div>
