Add friendships page and methods, adjust incoming Twilio msgs

--- a/app/views/events/option_proposals.html.erb
+++ b/app/views/events/option_proposals.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="col-md-4" data-wow-duration="1000ms" data-wow-delay="300ms">
       <% if pending_options_array.count == 0 %>
-        <h2>No pending event options</h2>
+        <h2>No pending options</h2>
       <% else %>
         <% pending_options_array.each do |event_id| %>
           <%= form_tag "/option_proposals", method: :post do %>
