--- a/app/views/events/option_responses.html.erb
+++ b/app/views/events/option_responses.html.erb
@@ -1,36 +1,40 @@
-<h1 class="title text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">Option Responses</h1>
-<br>
-
 <section id="services">
   <div class="container">
-    <% @event_options.each do |event_option| %>
-      <div class="row" wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
-        <%= form_tag "/option_send_final", method: :post do %>
-          <h4>Who</h4>
-          <p><%= Group.find(EventInvitation.find_by(event_id: event_option[0].id).group_id).name %></p>
-          <br>
-          <h4>What</h4>
-          <p><%= event_option[0].name %></p>
-          <br>
-          <h4>Where</h4>
-          <p><%= event_option[0].location %></p>
-          <br>
-          <h4>When - Options</h4>
-          <% event_option[1].each do |option| %>
-            <div class="col-md-2"><input type="submit" class="btn btn-success" value="Send Invite(s)"></div>
-            <div class="col-md-3"><%= option[0].start.strftime("%a, %b %d %I:%M %P") %> - <%= option[0].end.strftime("%I:%M %P") %></div>
-            <input type="hidden" name="option" value="<%= option[0].id %>">
-            <% people = [] %>
-            <% option[1].each do |person| %>
-              <% people << person.name  %>
+    <% if option_responses_count == 0 %>
+      <h2>No option responses</h2>
+    <% else %>
+      <h1 class="title text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">Option Responses</h1>
+      <br>
+
+      <% @event_options.each do |event_option| %>
+        <div class="row" wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
+          <%= form_tag "/option_send_final", method: :post do %>
+            <h4>Who</h4>
+            <p><%= Group.find(EventInvitation.find_by(event_id: event_option[0].id).group_id).name %></p>
+            <br>
+            <h4>What</h4>
+            <p><%= event_option[0].name %></p>
+            <br>
+            <h4>Where</h4>
+            <p><%= event_option[0].location %></p>
+            <br>
+            <h4>When - Options</h4>
+            <% event_option[1].each do |option| %>
+              <div class="col-md-2"><input type="submit" class="btn btn-success" value="Send Invite(s)"></div>
+              <div class="col-md-3"><%= option[0].start.strftime("%a, %b %d %I:%M %P") %> - <%= option[0].end.strftime("%I:%M %P") %></div>
+              <input type="hidden" name="option" value="<%= option[0].id %>">
+              <% people = [] %>
+              <% option[1].each do |person| %>
+                <% people << person.name  %>
+              <% end %>
+              <div class="col-md-3"><img src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-8/16/User-blue-icon.png" > <%= people.join(", ") %></div>
+              <br>
+              <br>
             <% end %>
-            <div class="col-md-3"><img src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-8/16/User-blue-icon.png" > <%= people.join(", ") %></div>
-            <br>
-            <br>
           <% end %>
-        <% end %>
-      </div>
-      <hr>
+        </div>
+        <hr>
+      <% end %>
     <% end %>
   </div>
 </section>
