Added yelp link feature, sort event index by start

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,18 +17,26 @@
         <h2><strong>Pending Events</strong></h2>
         <% @pending_events.each do |event| %>
           <div class="well" id="customized-well">
+
             <h4><%= event.name %></h4>
+
             <% if EventInvitation.find_by(event_id: event.id).group_id %>
               <p><img src="http://icons.iconarchive.com/icons/custom-icon-design/silky-line-user/16/users-icon.png"> <%= Group.find(EventInvitation.find_by(event_id: event.id).group_id).name %> - <%= EventInvitation.find_by(event_id: event.id, mem_type: "owner").user.name %></p>
             <% end %>
+
             <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Time-And-Date-Timer-icon.png"> <%= event.friendly_time(event.start) %> - <%= event.friendly_time_only(event.end) %></p>
-            <% if event.location != "" %>
+
+            <% if event.location && event.yelp %>
+              <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Maps-Location-icon.png"> <a href="<%= event.yelp %>"><%= event.location %></a></p>
+            <% elsif event.location != "" %>
               <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Maps-Location-icon.png"> <%= event.location %></p>
             <% end %>
+
             <%= form_tag "/eventinvitations/#{EventInvitation.where(event_id: event.id, user_id: current_user.id)[0].id}", method: :patch do %>
               <p><input type="submit" class="btn btn-success" name="decision" value="Accept">
               <input type="submit" class="btn btn-danger" name="decision" value="Decline"></p>
             <% end %>
+
           </div>
         <% end %>
       <% end %>
@@ -36,24 +44,31 @@
       <% if @accepted_events.count > 0 %>
         <h2><strong>Accepted Events</strong></h2>
         <% @accepted_events.each do |event| %>
-        <div class="well" id="customized-well">
-          <% if EventInvitation.find_by(event_id: event.id, user_id: current_user.id).mem_type == "owner" %>
-            <h4><a href="/events/<%= event.id %>"><%= event.name %></a></h4>
-          <% else %>
-            <h4><%= event.name %></h4>
-          <% end %>
-          <% if EventInvitation.find_by(event_id: event.id).group_id %>
-            <p><img src="http://icons.iconarchive.com/icons/custom-icon-design/silky-line-user/16/users-icon.png"> <%= Group.find(EventInvitation.find_by(event_id: event.id).group_id).name %> - <%= EventInvitation.find_by(event_id: event.id, mem_type: "owner").user.name %></p>
-          <% end %>
-          <% if event.start %>
-            <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Time-And-Date-Timer-icon.png"> <%= event.friendly_time(event.start) %> - <%= event.friendly_time_only(event.end) %></p>
-          <% else %>
-            <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Time-And-Date-Timer-icon.png"> TBD</p>
-          <% end %>
-          <% if event.location != "" %>
-            <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Maps-Location-icon.png"> <%= event.location %></p>
-          <% end %>
-        </div>
+          <div class="well" id="customized-well">
+
+            <% if EventInvitation.find_by(event_id: event.id, user_id: current_user.id).mem_type == "owner" %>
+              <h4><a href="/events/<%= event.id %>"><%= event.name %></a></h4>
+            <% else %>
+              <h4><%= event.name %></h4>
+            <% end %>
+
+            <% if EventInvitation.find_by(event_id: event.id).group_id %>
+              <p><img src="http://icons.iconarchive.com/icons/custom-icon-design/silky-line-user/16/users-icon.png"> <%= Group.find(EventInvitation.find_by(event_id: event.id).group_id).name %> - <%= EventInvitation.find_by(event_id: event.id, mem_type: "owner").user.name %></p>
+            <% end %>
+
+            <% if event.start %>
+              <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Time-And-Date-Timer-icon.png"> <%= event.friendly_time(event.start) %> - <%= event.friendly_time_only(event.end) %></p>
+            <% else %>
+              <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Time-And-Date-Timer-icon.png"> TBD</p>
+            <% end %>
+
+            <% if event.location && event.yelp %>
+              <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Maps-Location-icon.png"> <a href="<%= event.yelp %>"><%= event.location %></a></p>
+            <% elsif event.location != "" %>
+              <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Maps-Location-icon.png"> <%= event.location %></p>
+            <% end %>
+
+          </div>
         <% end %>
       <% end %>
     </div>
