--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -8,11 +8,11 @@
           <div class="row">
             <div class="col-sm-6">
               <%= form_tag '/groups', method: :post do %>
-                <h4>Name: <input type="text" name="name"></h4>
+                <h4>Name: <input type="text" name="name" required="required"></h4>
                 <br>
                 <h4>
                   Share Calendar?
-                  <select class="selectpicker", name = "share_cal">
+                  <select class="multiselect" name = "share_cal">
                     <option value="true">Yes</option>
                     <option value="false">No</option>
                   </select>
@@ -20,7 +20,7 @@
                 <br>
                 <h4>
                   Members:
-                  <select class="multiselect" multiple="multiple", name = "friends[]">
+                  <select class="multiselect" multiple="multiple", name = "friends[]" required="required">
                     <% @friends.each do |friend| %>
                       <option value="<%= friend.name %>">
                         <%= friend.name.capitalize %>
