--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -19,13 +19,14 @@
         <br>
         <h4>What</h4>
         <% if params[:name] %>
-          <p><input type="text" name="name" value="<%= params[:name] %>"></p>
+          <p><input type="text" name="name" value="<%= params[:name] %>" required="required"></p>
         <% else %>
-          <p><input type="text" name="name"></p>
+          <p><input type="text" name="name" required="required"></p>
         <% end %>
         <br>
         <h4>Where</h4>
-        <p><input type="text" name="location"></p>
+        <p><input type="text" name="location" placeholder="name"> - <input type="text" name="city" placeholder="city"> <input type="text" name="state" placeholder="state"></p>
+        <p><i>Provide city and state to include Yelp link.</i></p>
         <br>
         <h4>When</h4>
         <% if params[:start] %>
@@ -33,7 +34,7 @@
               <div class='col-md-4'>
                   <div class="form-group">
                       <div class='input-group date' id='datetimepicker4'>
-                          <input type='text' class="form-control" name="start">
+                          <input type='text' class="form-control" name="start" required="required">
                           <span class="input-group-addon">
                               <span class="glyphicon glyphicon-calendar"></span>
                           </span>
@@ -43,7 +44,7 @@
               <div class='col-md-4'>
                   <div class="form-group">
                       <div class='input-group date' id='datetimepicker5'>
-                          <input type='text' class="form-control" name="end">
+                          <input type='text' class="form-control" name="end" required="required">
                           <span class="input-group-addon">
                               <span class="glyphicon glyphicon-calendar"></span>
                           </span>
