--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -42,7 +42,7 @@
       <% end %>
 
       <% if @accepted_events.count > 0 %>
-        <h2><strong>Accepted Events</strong></h2>
+        <h2><strong>Upcoming Events</strong></h2>
         <% @accepted_events.each do |event| %>
           <div class="well" id="customized-well">
 
@@ -66,6 +66,10 @@
               <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Maps-Location-icon.png"> <a href="<%= event.yelp %>"><%= event.location %></a></p>
             <% elsif event.location != "" %>
               <p><img src="http://icons.iconarchive.com/icons/icons8/ios7/16/Maps-Location-icon.png"> <%= event.location %></p>
+            <% end %>
+
+            <%= form_tag "/eventinvitations/#{EventInvitation.where(event_id: event.id, user_id: current_user.id)[0].id}", method: :patch do %>
+              <p><input type="submit" class="btn btn-danger" name="decision" value="Decline"></p>
             <% end %>
 
           </div>
