--- a/app/views/groups/add_friends.html.erb
+++ b/app/views/groups/add_friends.html.erb
@@ -1,19 +1,25 @@
 <section id="services">
   <div class="container">
-    <h2 class="title wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">Your Friends</h2>
-    <% @users_friends.each do |friend| %>
-      <p><img src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-8/16/User-blue-icon.png" > <%= friend.name %></p>
-    <% end %>
-    <br>
-    <br>
-    <h2 class="title wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">Add Friends</h2>
-    <%= form_tag "/add_friends", method: :post do %>
-      <p>Email: <input type="email" name="emails[]"></p>
-      <p>Email: <input type="email" name="emails[]"></p>
-      <p>Email: <input type="email" name="emails[]"></p>
-      <p>Email: <input type="email" name="emails[]"></p>
-      <p>Email: <input type="email" name="emails[]"></p>
-      <p><input class="btn btn-primary" type="submit" value="Add Friend(s)"></p>
-    <% end %>
+    <div class="row">
+      <h2 class="title wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">Your Friends</h2>
+      <% @users_friends.each do |friend| %>
+        <div class="col-md-4">
+          <p><img src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-8/16/User-blue-icon.png" > <%= friend.name %></p>
+        </div>
+      <% end %>
+    </div>
+    <div class="row">
+    </div>
+    <div class="row">
+      <h2 class="title wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">Add Friends</h2>
+      <%= form_tag "/add_friends", method: :post do %>
+        <p>Email: <input type="email" name="emails[]"></p>
+        <p>Email: <input type="email" name="emails[]"></p>
+        <p>Email: <input type="email" name="emails[]"></p>
+        <p>Email: <input type="email" name="emails[]"></p>
+        <p>Email: <input type="email" name="emails[]"></p>
+        <p><input class="btn btn-primary" type="submit" value="Add Friend(s)"></p>
+      <% end %>
+    </div>
   </div>
 </section>
