--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -73,6 +73,7 @@
                       <li><a href="/groups/<%= group.id %>">D</a></li>
                     <% end %>
                     <li><a href="/events/new?group=<%= group.id %>">+</a></li>
+                    <li><a href="/groupinvitations/<%= GroupInvitation.find_by(group_id: group.id, user_id: current_user.id).id %>/decline">-</a></li>
                     <% if group.share_cal %>
                       <li><a href="/groups/<%= group.id %>/events"><i class="fa fa-eye"></i></a></li>
                     <% end %>
