--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,9 @@
                 </li>                    
                 <li class="dropdown"><a href="#">Groups (<%= GroupInvitation.where(user_id: current_user.id, decision: "pending").count %>) <i class="fa fa-angle-down"></i></a>
                     <ul role="menu" class="sub-menu">
-                      <li><a href="/groups">All Groups</a></li>
+                      <li><a href="/groups">All Groups (<%= GroupInvitation.where(user_id: current_user.id, decision: "Accept").count %>)</a></li>
                       <li><a href="/groups/new">Add Group</a></li>
+                      <li><a href="/add_friends">Add Friends</a></li>
                     </ul>
                 </li>
                 <li><%= link_to 'Log Out', '/logout', {method: :delete} %></li>
