--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,15 +55,16 @@
                       <li><a href="/add_friends">Add Friends</a></li>
                     </ul>
                 </li>
+                <!-- <li><a href="/notifications"><img src="/images/logo2.png"> (x)</a></li> -->
                 <li><%= link_to 'Log Out', '/logout', {method: :delete} %></li>
-                <div class="search">
+                <!-- <div class="search">
                   <form role="form">
                     <i class="fa fa-search"></i>
                     <div class="field-toggle">
                       <input type="text" class="search-form" autocomplete="off" placeholder="Search">
                     </div>
                   </form>
-                </div>
+                </div> -->
               <% else %>
                 <li><a href="/login">Log In</a></li>
                 <li><a href="/signup">Sign Up</a></li>
