--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -49,5 +49,9 @@
         <% end %>
       <% end %>
     </table>
+
+    <%= form_tag "/events/#{@event.id}/cancel", method: :patch do %>
+      <p><input type="submit" class="btn btn-danger" value="Cancel"></p>
+    <% end %>
   </div>
 </div>
