--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -8,10 +8,10 @@
         <h4>Who</h4>
         <select class="multiselect" multiple="multiple" name = "groups[]">
           <% @groups.each do |group| %>
-            <% if @chosen_group_id == Group.find_by(name: group).id %>
-              <p><option value="<%= group %>" selected="selected"> <%= group %></option></p>
+            <% if @chosen_group_id == group.id %>
+              <p><option value="<%= group.id %>" selected="selected"> <%= group.name %></option></p>
             <% else %>
-              <p><option value="<%= group %>"> <%= group %></option></p>
+              <p><option value="<%= group.id %>"> <%= group.name %></option></p>
             <% end %>
           <% end %>
         </select>
